Cleanup comments that reflect differences in JDK 9 - 16